@@ -58,7 +58,19 @@ application {
     val agentJarPath = configurations["runtimeClasspath"].resolvedConfiguration.resolvedArtifacts.find {
         it.moduleVersion.id.group == "com.beyondgrader.resource-agent"
     }!!.file.absolutePath
-    applicationDefaultJvmArgs += listOf("-javaagent:$agentJarPath", "--enable-preview")
+    applicationDefaultJvmArgs += listOf(
+        "-ea", "--enable-preview", "-javaagent:$agentJarPath",
+        "-Dfile.encoding=UTF-8",
+        "-Xms512m", "-Xmx1G", "-Xss256k", "-XX:+UseZGC", "-XX:ZCollectionInterval=8",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports", "java.management/sun.management=ALL-UNNAMED"
+    )
 }
 docker {
     name = "cs125/questioner"
